--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pg": "^8.3.3"
+  }
 }
